--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
   }
+  html,body{
+      overflow-x: hidden;
+    
+  }
   body{
     background: #111111;
     font-family: "lora-regular", serif;
@@ -12,111 +16,165 @@
   h1,h2,h3,h4,h5{
     font-family: "montserrat-medium", sans-serif;
   }
-  /* header-section */
-  header{
-    background-image: url('images/hero-bg.jpg.png'); 
-    background-size: cover;
-    height: 100%;
-    background-color: transparent;
-    position: relative;
-    padding-bottom: 10%;
-  }
-  .navbar{
-     padding-left: 2px;
-     z-index: 9999;
-  }
-  .navbar-nav li.nav-item a.nav-link {
-    color: white;
-  }
-  .navbar p{
-    color: #757575;
-  }
-  /* .overlay{
-    opacity: 4;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
-  } */
   
-  .navbar-collapse {
-    position: fixed;
+  .menu h4{
+    font-family: "montserrat-medium", sans-serif;
+  }
+  .main{
     top: 0;
+    
+    height: 100%;
+      z-index: 10;
+    padding: 10px,50px;
+    background-image: url('images/hero-bg.jpg.png');
+    background-color: transparent;
+    background-size: cover;
+  }
+  .sidebarMenu{
+    height: 100%;
+    position: fixed;
     right: 0;
-    bottom: 0;
-    padding: 15px;
-    width: 250px; /* Adjust the width as needed */
-    overflow-y: scroll;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-out;
+    top: 0;
+    width: 270px;
+    margin-top: 0px;
     background-color: #111111;
+    transform: translateX(270px);
+    transition: transform 250ms ease-in-out;
+    overflow-y: scroll;
+    z-index: 999;
   }
-
-  .navbar-collapse.show {
-    transform: translateX(0);
+  #openSidebarMenu:checked ~ .sidebarMenu{
+    transform: translateX(0px);
   }
-  .navbar-toggler{
-    color: #111111;
+ 
+  .menu{
+    padding: 0;
+    margin: 0;
+    list-style: none;
   }
-  .header-content{
-    margin-left: 5%;
+  .menu li{
+    color: #fff;
+    font-family: "montserrat-medium", sans-serif;
+    font-size: 15px;
+  }
+  .menu li a{
+    color: #fff;
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 15px;
+    font-family: "montserrat-medium", sans-serif;
+  }
+  .sidebarMenu p{
+    color: #fff;
+    font-size: 15px;
+    padding: 0px 8px;
+  }
+  .sidebarIconToggle{
+    
+    width: 22px;
+    height: 22px;
+    position: fixed;
+    
+   z-index: 99999;
+    top: 25px;
+    right: 63px;
+    cursor: pointer;
     
   }
-.header-content h3{
-   
-    font-family: "montserrat-medium", sans-serif;
-    font-size: 1rem;
-    font-weight: 700;
-    color: rgba(255, 255, 255, 0.5);
-    letter-spacing: .3rem;
-    position: relative;
-    margin-top: 25%;
-    margin-bottom: 1.2rem;
-    text-transform: uppercase;
-    margin-left: 5px;
-}
-.header-content h1{
-    color: #fff;
-    font-size: 60px;
-    font-weight: 700;
-    margin-bottom: 15%;
-}
-.menu,.navigation{
+  
+  .menu-heading{
+    position: fixed;
+    right: 60px;
+    top: 16px;
     color: #39b54a;
     background-color: #111111;
-    font-family: "montserrat-medium", sans-serif;
     text-transform: uppercase;
-    font-size: 18px;
-    letter-spacing: .2em;
+    padding: 5px;
+    padding-right: 30px;
+   
+  }
+  .custom-css{
+    background-color: #111111;
+  }
+  
+  .spinner{
+    height: 2px;
+    background: #fff;
+    transition: all 0.3s;
+  }
+  .spinner.middle,.spinner.bottom{
+    margin-top: 3px;
+  }
+  #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.middle{
+    opacity: 0;
+  }
+  #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.top{
+    transform: rotate(135deg);
+    margin-top: 8px;
+  }
+  #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.bottom{
+    transform: rotate(-135deg);
+    margin-top: -9px
+  }
+
+  .social-icons{
+  color: #fff;
+  text-align: center;
+} 
+.header-content h3{
+   
+  font-family: "montserrat-medium", sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.5);
+  letter-spacing: .3rem;
+  position: relative;
+  margin-top: 25%;
+  margin-bottom: 1.2rem;
+  text-transform: uppercase;
+  
 }
-/* i{
-  display: inline-block;
+.header-content h3,h1{
+  margin-left: 15%;
+}
+.header-content h1{
+  color: #fff;
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 10%;
+}
+.icon-circles .circle-icon .fa{
+  color:#fff !important;
+  background-color: transparent;
+  font-size: 20px;
+  
+}
+.icon-circles {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 60%;
+}
+.circle-icon i{
+  margin-top: 9px;
+}
+.circle-icon {
+  display: flex; 
+  justify-content: center;
   width: 40px;
   height: 40px;
+  border: 2px solid white;
   border-radius: 50%;
-  background-color: transparent;
-  border: 1px solid #ffffff;
-  text-align: center;
-  line-height: 40px;
-  color: #ffffff;
-  font-size: 20px;
-  transition: background-color 0.3s ease-in-out;
-  
-} */
-/* .social-icons{
-  color: #fff;
-  
-} */
-.fa{
-  color:#fff;
-  background-color: #fff;
+  margin-bottom: 20px;
 }
 .start-a-project,.more-about{
   border: 1px solid #fff;
   padding: 8px 40px;
   color: #fff;
+  font-family: "montserrat-medium", sans-serif;
+  text-align: center;
+  margin-left: 15%;
  
 }
 .start-a-project:hover,.more-about:hover{
@@ -130,6 +188,54 @@
 .more-about .btn,.start-a-project .btn{
   color: #fff;
 }
+.start-a-project button{
+  padding-bottom: 5%;
+}
+.footer-btn{
+  background-color: #111111;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 10px;
+}
+@media(max-width:767px){
+.header-buttons{
+  width: 60%;
+  margin: auto;
+  text-align: center;
+}
+.start-a-project,.more-about{
+  margin-left: 0;
+}
+.header-content h1{
+  font-size: 40px;
+}
+}
+@media(max-width:598px){
+  .start-a-project button,.more-about button{
+    font-size: 12px;
+  }
+  .header-content h1{
+    font-size: 30px;
+  }
+  }
+  @media(max-width:998px){
+    .header-content h1{
+      font-size: 50px;
+    }
+    }
+
+@media(max-width:598px){
+  .circle-icon{
+    display: none;
+  }
+}
+@media(max-width:767px){
+  .more-about {
+    margin-left: 0px;
+    margin-top: 10px;
+  }
+}
 
 /* section-1 */
 .section-1{
@@ -137,6 +243,7 @@
   background-color: #39b54a;
   height: 100%;
   padding-bottom: 10%;
+  z-index: 10;
 }
 .section-content h2{
 text-transform: uppercase;
@@ -180,6 +287,14 @@ font-family: "montserrat-bold", sans-serif;
   font-weight: 800;
   margin-left: 3px;
 }
+.social-icons{
+  font-size: 20px;
+}
+.social-icons .fa{
+  margin: 5px;
+color: #757575;
+background-color: transparent;
+}
 
 @media(max-width:580px){
   .custom-border {
@@ -219,6 +334,7 @@ font-family: "montserrat-bold", sans-serif;
   height: 100%;
   padding: 10%;
   background-color: #fff;
+  z-index: 10;
 }
 .section-2 .custom-hr{
   margin-bottom: 5%;
@@ -261,6 +377,339 @@ font-family: "montserrat-bold", sans-serif;
   }
 }
 
+/* section-3 */
+.section-3{
+  background: linear-gradient(#111111 0%, #111111 30%, #fff 30%, #fff 100%);
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+.section-3 .sec-2-para{
+  color: #fff;
+}
+.section-3 .row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.column{
+  padding-top: 5%;
+  flex: 50%;
+  max-width: 50%;
+
+}
+
+.column img {
+  width: 100%;
+}
+@media(max-width:767px ){
+  .column{
+    flex: 100%;
+    max-width: 100%;
+  }
+  .sec-2-para{
+   font-size: 30px;
+}
+}
+@media(max-width:998px ){
+  .sec-2-para{
+    font-size: 40px;
+  }
+}
+@media(max-width:558px ){
+  .sec-2-para{
+    font-size: 20px;
+  }
+}
 
 
+
+/* section4 */
+.section-4{
+  padding-top: 10%;
+  background-color: #e6e6e6;
+}  
+
+/* caurosel css */
+.carousel-inner .carousel-item-content h1{
+  color: #757575;
+  font-size: 30px;
+  margin: 0px 20px;
+}
+.profile-img img{
+  margin-top: 3%;
+  border-radius: 50%;
+  width: 100px;
   
+}
+.profile-title h3{
+  margin-top: 3px;
+  font-size: 15px;
+  font-weight: 700;
+}
+.profile-title h5{
+  color: #757575;
+  margin-top: 3px;
+  font-size: 14px;
+  letter-spacing: 2px;
+}
+.owl-dots .owl-dot span {
+  width: 15px;
+  height: 15px;
+  margin: 5px 7px;
+  background: #869791;
+  display: block;
+ 
+  transition: opacity .2s ease;
+  border-radius: 30px;
+  
+}
+.owl-dots{
+  text-align: center;
+}
+.owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+  background: #869791;
+  
+}
+.owl-carousel .item img{
+opacity: 0.6;
+
+}
+.owl-carousel .item img:hover{
+  opacity: 1
+  }
+
+.carousel-control-next .fa{
+  color: black;
+  
+  font-size: 30px
+}
+.carousel-control-prev .fa{
+  color: black;
+  font-size: 30px;
+}
+
+.indicators .fa{
+  color: #757575;
+}
+.indicators{
+  text-align: center;
+}
+
+/* section5 */
+.section-5{
+  padding-top: 10%;
+  padding-bottom: 10%;
+  background-image: url('images/contact-bg.jpg');
+}
+.section-5 .sec-2-para{
+  color: #fff;
+}
+.section-5 .contact-content h3{
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 700;
+  margin-top: 5%;
+ 
+}
+.form-group input,.form-group textarea{
+
+  background-color: transparent;
+  border: none;
+  width: 90%;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.07);
+  padding: 1.5rem 0;
+  
+}
+.form-group input:focus,.form-group textarea:focus{
+  background-color: transparent;
+  border-bottom: 1px solid #39b54a;
+  box-shadow: none;
+}
+.form-group .form-control::placeholder {
+  color: #757575; /* Set the placeholder color */
+}
+.btn-submit{
+  margin-top: 5%;
+  width: 90%;
+}
+.section-5 button {
+  padding: 15px;
+  border-radius: 0%;
+}
+.contact-content{
+  margin-left: 40px;
+}
+.section-5 .col-md-4{
+  background-color: #111111;
+  opacity: 0.9;
+}
+.section-5 .col-md-8{
+  background-color: #111111;
+  opacity: 0.7;
+}
+.address-content h4,.email-content h4,.call-content h4{
+  color: #39b54a;
+  font-size: 16px;
+  margin-top: 5%;
+  font-weight: 600;
+}
+.address-content h5,.email-content h5,.call-content h5{
+  color: #757575;
+  font-size: 15px;
+  
+}
+.address-content,.email-content,.call-content{
+  padding-top: 10%;
+}
+.section-5 .social-icons{
+  margin-left: 10%;
+  margin-bottom: 5%;
+}
+.section-5 .social-icons .fa{
+  color: #fff;
+}
+
+@media(max-width:578px ){
+  .section-5 .sec-2-para{
+    font-size: 40px;
+  }
+}
+
+/* footer */
+.footer-section{
+  background-color: #111111;
+  padding-top: 10%;
+}
+
+.footer-section h3{
+  color: #39b54a;
+  font-size: 40px;
+}
+.footer-section h4{
+  color: #fff;
+}
+.footer-section p{
+  color: #757575;
+}
+.footer-section input{
+
+  border-bottom: none;
+  background: rgba(0, 0, 0, 0.1);
+  padding: 5%;
+  border-left: none;
+  border-top: none;
+}
+.footer-section input:focus{
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.footer-section .input-group-text{
+  background-color: #111111;
+  border: none;
+  background: rgba(0, 0, 0, 0.1);
+}
+.form-group {
+  /* Set the desired width for the container */
+  width: 400px;
+}
+
+.input-group-append .btn{
+  padding: 0 40px;
+  color: #fff;
+  background-color: #39b54a;
+  font-family: "montserrat-medium", sans-serif;
+  font-size: 15px;
+
+}
+
+.footer-section .fa{
+  font-size:25px;
+  color: #fff;
+}
+.footer-copyright .author-name{
+  margin-left: 15px;
+}
+
+.scroll-top .fa{
+  color: #fff;
+  background-color: black;
+}
+
+.scroll-top {
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  line-height: 35px;
+  font-size: 20px;
+  color: #fff;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
+  cursor: pointer;
+  
+}
+.scroll-top a{
+  text-decoration: none;
+}
+.scroll-top i{
+  border-radius: 10%;
+  padding: 12px 18px;
+  border: none;
+}
+
+@media (max-width: 500px) {
+  /* Set the display to block for the input and button, making them stack vertically */
+  .input-group .form-control,
+  .input-group .input-group-append {
+    display: block;
+    width: 100%; /* Make them take the full width of their container */
+  }
+  .input-group-append .btn{
+    margin-top: 10px;
+    padding: 4% 37%;
+    border-radius: 0%;
+  }
+  .footer-section input{
+    padding: 6%;
+    border-right: none;
+  }
+  .footer-section .fa{
+    display: none;
+  }
+  .footer-section .form-control::placeholder {
+    text-align: center; /* Set the placeholder color */
+  }
+}
+@media(max-width:578px ){
+  .vertical-bar{
+    display: none;
+  }
+  .footer-copyright  p{
+   text-align: center;
+  }
+}
+@media(max-width:598px ){
+  .footer-section h3{
+    text-align: center;
+  }
+  .footer-section h4{
+    margin-top: 20px;
+  }
+  .footer-section .para-content{
+    margin-top: 5%;
+  }
+}
+@media(max-width:598px ){
+  .footer-section .form-group input{
+    text-align: center;
+  }
+  /* 
+   */
+}
+
+
+
+
