--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@
     background-color: #111111;
     text-transform: uppercase;
     padding: 5px;
-    padding-right: 30px;
+    padding-right: 40px;
+    padding-left: 10px;
    
   }
   .custom-css{
@@ -118,7 +119,7 @@
     margin-top: -9px
   }
 
-  .social-icons{
+ .sidebarMenu .social-icons{
   color: #fff;
   text-align: center;
 } 
@@ -243,7 +244,6 @@
   background-color: #39b54a;
   height: 100%;
   padding-bottom: 10%;
-  z-index: 10;
 }
 .section-content h2{
 text-transform: uppercase;
@@ -516,7 +516,7 @@ opacity: 0.6;
 
   background-color: transparent;
   border: none;
-  width: 90%;
+  width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.07);
   padding: 1.5rem 0;
   
@@ -580,6 +580,7 @@ opacity: 0.6;
 .footer-section{
   background-color: #111111;
   padding-top: 10%;
+  z-index: 9;
 }
 
 .footer-section h3{
