--- a/style.css
+++ b/style.css
@@ -20,6 +20,16 @@
   .menu h4{
     font-family: "montserrat-medium", sans-serif;
   }
+  .overlay{
+    background-color: black;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%
+  }
+  
   .main{
     top: 0;
     
@@ -29,6 +39,7 @@
     background-image: url('images/hero-bg.jpg.png');
     background-color: transparent;
     background-size: cover;
+    position: relative;
   }
   .sidebarMenu{
     height: 100%;
