--- a/style.css
+++ b/style.css
@@ -32,15 +32,15 @@
   
   .main{
     top: 0;
-    
     height: 100%;
-      z-index: 10;
+    z-index: 10;
     padding: 10px,50px;
     background-image: url('images/hero-bg.jpg.png');
     background-color: transparent;
     background-size: cover;
     position: relative;
   }
+  
   .sidebarMenu{
     height: 100%;
     position: fixed;
@@ -73,7 +73,7 @@
     display: block;
     text-decoration: none;
     text-transform: uppercase;
-    padding: 15px;
+    padding: 10px;
     font-family: "montserrat-medium", sans-serif;
   }
   .sidebarMenu p{
@@ -88,23 +88,29 @@
     position: fixed;
     
    z-index: 99999;
-    top: 25px;
-    right: 63px;
+    top: 34px;
+    right: 68px;
     cursor: pointer;
+    padding-top: 3px;
+    padding-left: 3px;
     
   }
-  
+  .sidebarMenu h4{
+    margin: 37px;
+    letter-spacing: 2px;
+  }
   .menu-heading{
     position: fixed;
     right: 60px;
-    top: 16px;
+    top: 24px;
     color: #39b54a;
     background-color: #111111;
     text-transform: uppercase;
     padding: 5px;
-    padding-right: 40px;
+    padding-right: 39px;
     padding-left: 10px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
+    padding-top: 6px;
    
   }
   .custom-css{
@@ -114,10 +120,12 @@
   .spinner{
     height: 2px;
     background: #fff;
-    transition: all 0.3s;
+    transition: all 0.3s; 
   }
+
   .spinner.middle,.spinner.bottom{
     margin-top: 3px;
+    
   }
   #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.middle{
     opacity: 0;
@@ -188,6 +196,7 @@
   font-family: "montserrat-medium", sans-serif;
   text-align: center;
   margin-left: 15%;
+  margin-bottom: 10%;
  
 }
 .start-a-project:hover,.more-about:hover{
@@ -258,8 +267,9 @@
   padding-bottom: 10%;
 }
 .section-content h2{
+  margin-top: 15px;
 text-transform: uppercase;
-font-size: 20px;
+font-size: 18px;
 letter-spacing: 2px;
 font-weight: 600;
 font-family: "montserrat-bold", sans-serif;
@@ -267,15 +277,15 @@ font-family: "montserrat-bold", sans-serif;
 .section-content h1{
   text-transform: capitalize;
   color: #fff;
-  font-size: 60px;
-  font-weight: 700;
+  font-size: 80px;
+  font-weight:600;
   letter-spacing: 2px;
   font-family: "montserrat-bold", sans-serif;
 }
 .section-content p {
   margin-left: 10%;
   margin-right: 10%;
-  font-size: 30px;
+  font-size: 27px;
   font-family: "montserrat-bold", sans-serif;
 }
 .custom-hr{
@@ -382,6 +392,7 @@ background-color: transparent;
   color: #757575;
   font-family: "montserrat-bold", sans-serif;
   margin-top: 5%;
+  margin-right: 10px;
 }
 @media(max-width:767px ){
   .service-icon,.service-text{
@@ -473,6 +484,9 @@ background-color: transparent;
   transition: opacity .2s ease;
   border-radius: 30px;
   
+}
+.profile-title{
+  margin-bottom: 15%;
 }
 .owl-dots{
   text-align: center;
