--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     z-index: 10;
     padding: 10px,50px;
     background-image: url('images/hero-bg.jpg.png');
+    background-repeat: no-repeat;
     background-color: transparent;
     background-size: cover;
     position: relative;
@@ -229,9 +230,6 @@
 .start-a-project,.more-about{
   margin-left: 0;
 }
-.header-content h1{
-  font-size: 40px;
-}
 }
 @media(max-width:598px){
   .start-a-project button,.more-about button{
@@ -241,9 +239,9 @@
     font-size: 30px;
   }
   }
-  @media(max-width:998px){
+  @media(max-width:414px){
     .header-content h1{
-      font-size: 50px;
+      font-size: 35px;
     }
     }
 
@@ -304,10 +302,15 @@ font-family: "montserrat-bold", sans-serif;
   letter-spacing: 2px;
   font-family: "montserrat-bold", sans-serif;
 }
-@media(max-width:567px){
+
+@media(max-width:414px){
   .section-content h1{
-    font-size: 60px;
+    font-size: 50px;
     font-weight:600;
+  }
+  .section-1{
+    padding-top: 20%;
+    padding-bottom: 40%;
   }
 }
 @media(max-width:402px){
@@ -419,13 +422,21 @@ background-color: transparent;
     font-weight: 700;
   }
 }
+@media(max-width:767px ){
+  .section-2{
+    padding-top: 20%;
+    padding-bottom: 25%;
+  }
+  .service-icon{
+    padding-top: 5%;
+  }
+}
 .fa{
   color: #39b54a;
 }
 .service-icon{
   font-size: 45px;
   margin-right: 5%;
- 
 }
 
 .service-text h2{
@@ -454,6 +465,7 @@ background-color: transparent;
 }
 .section-3 .sec-2-para{
   color: #fff;
+  font-weight: 600;
 }
 .section-3 .row {
   display: flex;
@@ -480,17 +492,15 @@ background-color: transparent;
   }
   .sec-2-para{
    font-size: 30px;
+   padding-left: 3%;
+   padding-right: 3%;
 }
 }
 
-@media(max-width:998px ){
+@media(max-width:414px ){
   .sec-2-para{
-    font-size: 40px;
-  }
-}
-@media(max-width:558px ){
-  .sec-2-para{
-    font-size: 20px;
+    font-weight: 800;
+    font-size: 45px;
   }
 }
 
@@ -501,6 +511,11 @@ background-color: transparent;
   padding-top: 10%;
   background-color: #e6e6e6;
 }  
+@media(max-width:768px ){
+  .section-4 .sec-2-para{
+    font-size: 25px;
+  }
+}
 
 /* caurosel css */
 .carousel-inner .carousel-item-content h1{
@@ -584,7 +599,6 @@ opacity: 0.6;
 /* section5 */
 .section-5{
   padding-top: 10%;
-  padding-bottom: 10%;
   background-image: url('images/contact-bg.jpg');
 }
 .section-5 .sec-2-para{
