--- a/style.css
+++ b/style.css
@@ -534,6 +534,9 @@ background-color: transparent;
     font-size: 20px;
   }
 }
+.carousel-item{
+  margin-bottom: 10%;
+}
 .profile-img img{
   margin-top: 3%;
   border-radius: 50%;
@@ -612,16 +615,13 @@ opacity: 0.6;
   letter-spacing: 2px;
   font-weight: 700;
   margin-top: 5%;
- 
 }
 .form-group input,.form-group textarea{
-
   background-color: transparent;
   border: none;
   width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.07);
   padding: 1.5rem 0;
-  
 }
 .form-group input:focus,.form-group textarea:focus{
   background-color: transparent;
@@ -678,8 +678,16 @@ opacity: 0.6;
   }
 }
 @media(max-width:767px ){
+ 
   .contact-content h3{
     display: none;
+  }
+  .contact-content{
+    margin-left: 0px;
+  }
+  .section-5 .social-icons{
+    margin-left: 0%;
+    margin-bottom: 25%;
   }
   .section-5 .col-md-4{
     opacity: 0.7;
