second section border space added

--- a/style.css
+++ b/style.css
@@ -364,11 +364,12 @@ background-color: transparent;
 @media(max-width:580px){
   .custom-border {
   content: "";
-  background-color: rgba(255, 255, 255, 0.50);
-  width: 50%;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.50) !important;
+  width: 70%;
   height: 0.5;
-  margin-left: 25%;
-  margin-top: 4%;
+  margin-left: 14%;
+  margin-top: 11%;
   }
 }
 @media(min-width:581px){
